# summer-of-code-website

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  production.config.yaml  pyproject.toml
.github/workflows/: deploy.yaml
k8s/: deploy.yaml  site.yaml
migrations/: env.py
migrations/versions/: 21a923931b8c_allow_for_larger_emoji_names.py  224cc0554906_create_tables.py  537f791a652c_create_tables.py  564536bb6ac9_create_tables.py  71deb111e3f9_actually_allow_for_larger_emoji_names.py  90c2c1e28da2_create_tables_the_rest_of_the_tables.py  df6f2bf16b39_add_settings_table.py
soc/: __main__.py  admin.py  announcements.py  api.py  auth.py  auth_helpers.py  auth_scheme.py  authentication_deps.py  config.py  context.py  controller.py  discord.py  emoji.py  events.py  rate_limiting.py  request_tracking.py  response.py  site.py  state_property.py  strenum.py
soc/apps/: admin.py  admin_api.py  admin_app.py  api.py  auth.py  site.py
soc/config/: __init__.py  base_model.py  config.py  settings_provider.py
soc/controllers/: authentication.py
soc/database/: __init__.py  challenges.py  config.py  database.py  provider.py  sessions.py  settings.py  users.py
soc/entities/: challenges.py  sessions.py  users.py  (+1 more)
static/: scripts.js
templates/: about.html  challenge.html  challenges.html  create_submission.html  dashboard.html  error.html  footer.html  header.html  index.html  login.html  logout.html  manage_db.html  rules.html  submissions-list.html
tests/: fuzzy.py  test_config.py  test_controllers.py  testing_admin.py  testing_api.py  testing_database.py
(+44 files in other folders)
