[tool.poetry]
name = "summer-of-code"
version = "0.1.0"
description = "The official website repo for the Beginner.Codes Summer of Code event."
authors = ["ZechCodes <hi@zech.codes>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
bevy = "^1.2.1"
SQLAlchemy = "^1.4.36"
asyncpg = "^0.25.0"
fastapi = "^0.78.0"
httpx = "^0.22.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
