[tool.poetry]
name = "summer-of-code"
version = "0.1.0"
description = "The official website repo for the Beginner.Codes Summer of Code event."
authors = ["ZechCodes <hi@zech.codes>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
bevy = "^1.2.1"
SQLAlchemy = "^1.4.36"
asyncpg = "^0.25.0"
fastapi = "^0.78.0"
httpx = "^0.22.0"
uvicorn = "^0.17.6"
alembic = "^1.7.7"
PyYAML = "^6.0"
black = "^22.3.0"
greenlet = "^1.1.2"
aiosqlite = "^0.17.0"
python-multipart = "^0.0.5"
bcrypt = "^3.2.2"
PyJWT = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
